New project Authorization.Database created

--- a/Exercises/Authorization.Database/Views/Admin/Login.cshtml
+++ b/Exercises/Authorization.Database/Views/Admin/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Authorization.Roles.Controllers.LoginViewModel
+﻿@model Authorization.Database.Controllers.LoginViewModel
 <h1>Login</h1>
 
 <p>
