Database EntityFrameworkCore Added

--- a/Exercises/Authorization.Database/Views/Admin/Login.cshtml
+++ b/Exercises/Authorization.Database/Views/Admin/Login.cshtml
@@ -6,15 +6,17 @@
 </p>
 
 <form asp-controller="Admin" asp-action="Login" method="post">
-    <input hidden asp-for="ReturnUrl" />
+    <div asp-validation-summary="All"></div>
+
+    <input hidden asp-for="ReturnUrl"/>
     <div>
         <label>UserName</label>
-        <input asp-for="UserName" />
+        <input asp-for="UserName"/>
         <span asp-validation-for="UserName"></span>
     </div>
     <div>
         <label>Password</label>
-        <input asp-for="Password" />
+        <input asp-for="Password"/>
         <span asp-validation-for="Password"></span>
     </div>
 
