Some markup enhancements

--- a/Exercises/Authorization.FacebookDemo/Views/Admin/Login.cshtml
+++ b/Exercises/Authorization.FacebookDemo/Views/Admin/Login.cshtml
@@ -10,28 +10,34 @@
     Login with external provider
 </h3>
 <form asp-controller="Admin" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
-    @foreach (var provider  in Model.ExternalProviders)
+    @foreach (var provider in Model.ExternalProviders)
     {
-        <button
-            type="submit"
-            name="provider"
-            value="@provider.Name">@provider.DisplayName</button>
-    }
+        <button type="submit"
+                name="provider"
+                value="@provider.Name">
+            @provider.DisplayName
+            </button>
+        }
 </form>
 
-
+<div>
+    <p style="color: #999">
+        <span>You can use: User</span><br/>
+        <span>and password: 123qwe</span>
+    </p>
+</div>
 <form asp-controller="Admin" asp-action="Login" method="post">
     <div asp-validation-summary="All"></div>
 
-    <input hidden asp-for="ReturnUrl"/>
+    <input hidden asp-for="ReturnUrl" />
     <div>
         <label>UserName</label>
-        <input asp-for="UserName"/>
+        <input asp-for="UserName" />
         <span asp-validation-for="UserName"></span>
     </div>
     <div>
         <label>Password</label>
-        <input asp-for="Password"/>
+        <input asp-for="Password" />
         <span asp-validation-for="Password"></span>
     </div>
 
