Authorization.IdentityServer updated with MvcClient

--- a/Exercises/Authorization.IdentityServer/Views/Auth/Login.cshtml
+++ b/Exercises/Authorization.IdentityServer/Views/Auth/Login.cshtml
@@ -19,4 +19,9 @@
     <p>
         <button type="submit">Log in</button>
     </p>
+    
+    <p>
+        UserName: User<br/>
+        Password: 123qwe
+    </p>
 </form>
