--- a/Exercises/Authorization.Client.Mvc/Views/Shared/_Menu.cshtml
+++ b/Exercises/Authorization.Client.Mvc/Views/Shared/_Menu.cshtml
@@ -1,2 +1,4 @@
 ﻿[<a asp-controller="Site" asp-action="Index">Index</a>]
 [<a asp-controller="Site" asp-action="Secret">Secret</a>]
+[<a asp-controller="Site" asp-action="Secret1">Secret1</a>]
+[<a asp-controller="Site" asp-action="Secret2">Secret2</a>]
