before update nuget-packages

--- a/Exercises/Authorization.Client.Mvc/Views/Site/Secret.cshtml
+++ b/Exercises/Authorization.Client.Mvc/Views/Site/Secret.cshtml
@@ -1,4 +1,6 @@
-﻿@model Authorization.Client.Mvc.ViewModels.ClaimManager
+﻿@using System.Security.Claims
+@using Authorization.Client.Mvc.ViewModels
+@model Authorization.Client.Mvc.ViewModels.ClaimManager
 <style>
     body {
         background-color: #f1f1f1;
@@ -71,7 +73,7 @@
         <div class="column">
 
             <h3>
-                @item.Name <b>@item.Claims.Count</b>
+                @item.Name <b>@GetClaims(item).Count</b>
             </h3>
 
             <div>
@@ -81,7 +83,7 @@
             </div>
 
 
-            @foreach (var claim in item.Claims)
+            @foreach (var claim in GetClaims(item))
             {
                 <span class="title" title="@claim.Type">@claim.Type:</span>
                 <span class="value" title="@claim.Value">@claim.Value</span><br />
@@ -89,3 +91,15 @@
         </div>
     }
 </div>
+
+@functions
+{
+    public List<Claim> GetClaims(ClaimViewer item)
+    {
+        if (item.Claims != null && item.Claims.Count > 0)
+        {
+            return item.Claims;
+        }
+        return new List<Claim>();
+    }
+}
