--- a/Exercises/Authorization.IdentityServer/Views/Auth/Login.cshtml
+++ b/Exercises/Authorization.IdentityServer/Views/Auth/Login.cshtml
@@ -7,7 +7,7 @@
     <input hidden asp-for="ReturnUrl" />
     <div>
         <label>UserName</label>
-        <input asp-for="UserName" />
+        <input asp-for="UserName" autofocus />
         <span asp-validation-for="UserName"></span>
     </div>
     <div>
