Все проекты переведены на NET 5.0

--- a/Exercises/Authorization.IdentityServer/Views/Account/Login.cshtml
+++ b/Exercises/Authorization.IdentityServer/Views/Account/Login.cshtml
@@ -43,7 +43,7 @@
                             }
 
                             <div>
-                                <p>The default users are alice/bob, password: Pass123$</p>
+                                <p>The default users are <b>User</b>, password: <b>123qwe</b></p>
                             </div>
 
                             <button class="btn btn-primary" name="button" value="login">Login</button>
